tests/parse_print/parsing01/stderr.expected
Error: tests/parse_print/parsing01/parsing01.essence:4:1:
  |
4 | <empty line>
  | ^
Missing L_EOF
